Added support for Org_chart

--- a/examples/2-embeddings/embeddings.ipynb
+++ b/examples/2-embeddings/embeddings.ipynb
@@ -2,10 +2,180 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d566bb99-6808-4976-8476-ed05b7941b80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>region</th>\n",
+       "      <th>variety</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3 Rings Reserve Shiraz 2004</td>\n",
+       "      <td>Barossa Valley, Barossa, South Australia, Aust...</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Vintage Comments : Classic Barossa vintage con...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abreu Vineyards Cappella 2007</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Cappella is a proprietary blend of two clones ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abreu Vineyards Cappella 2010</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Cappella is one of the oldest vineyard sites i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abreu Vineyards Howell Mountain 2008</td>\n",
+       "      <td>Howell Mountain, Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>When David purchased this Howell Mountain prop...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abreu Vineyards Howell Mountain 2009</td>\n",
+       "      <td>Howell Mountain, Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>As a set of wines, it is hard to surpass the f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1360</th>\n",
+       "      <td>Lewis Cellars Alec's Blend Red 2002</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Number 12 on</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1361</th>\n",
+       "      <td>Lewis Cellars Cabernet Sauvignon 2002</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Showcasing the unique personalities of small h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1362</th>\n",
+       "      <td>Lewis Cellars Cuvee L Cabernet Sauvignon 2015</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Straight from James Fenimore Cooper’s novel, L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1363</th>\n",
+       "      <td>Lewis Cellars Reserve Cabernet Sauvignon 2010</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1364</th>\n",
+       "      <td>Lewis Cellars Reserve Cabernet Sauvignon (scuf...</td>\n",
+       "      <td>Napa Valley, California</td>\n",
+       "      <td>Red Wine</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>The headline reads: \"2012 Reserve Cabernet - R...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1347 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   name  \\\n",
+       "0                           3 Rings Reserve Shiraz 2004   \n",
+       "1                         Abreu Vineyards Cappella 2007   \n",
+       "2                         Abreu Vineyards Cappella 2010   \n",
+       "3                  Abreu Vineyards Howell Mountain 2008   \n",
+       "4                  Abreu Vineyards Howell Mountain 2009   \n",
+       "...                                                 ...   \n",
+       "1360                Lewis Cellars Alec's Blend Red 2002   \n",
+       "1361              Lewis Cellars Cabernet Sauvignon 2002   \n",
+       "1362      Lewis Cellars Cuvee L Cabernet Sauvignon 2015   \n",
+       "1363      Lewis Cellars Reserve Cabernet Sauvignon 2010   \n",
+       "1364  Lewis Cellars Reserve Cabernet Sauvignon (scuf...   \n",
+       "\n",
+       "                                                 region   variety  rating  \\\n",
+       "0     Barossa Valley, Barossa, South Australia, Aust...  Red Wine    96.0   \n",
+       "1                               Napa Valley, California  Red Wine    96.0   \n",
+       "2                               Napa Valley, California  Red Wine    98.0   \n",
+       "3              Howell Mountain, Napa Valley, California  Red Wine    96.0   \n",
+       "4              Howell Mountain, Napa Valley, California  Red Wine    98.0   \n",
+       "...                                                 ...       ...     ...   \n",
+       "1360                            Napa Valley, California  Red Wine    96.0   \n",
+       "1361                            Napa Valley, California  Red Wine    96.0   \n",
+       "1362                            Napa Valley, California  Red Wine    96.0   \n",
+       "1363                            Napa Valley, California  Red Wine    96.0   \n",
+       "1364                            Napa Valley, California  Red Wine    96.0   \n",
+       "\n",
+       "                                                  notes  \n",
+       "0     Vintage Comments : Classic Barossa vintage con...  \n",
+       "1     Cappella is a proprietary blend of two clones ...  \n",
+       "2     Cappella is one of the oldest vineyard sites i...  \n",
+       "3     When David purchased this Howell Mountain prop...  \n",
+       "4     As a set of wines, it is hard to surpass the f...  \n",
+       "...                                                 ...  \n",
+       "1360                                      Number 12 on   \n",
+       "1361  Showcasing the unique personalities of small h...  \n",
+       "1362  Straight from James Fenimore Cooper’s novel, L...  \n",
+       "1363                                                     \n",
+       "1364  The headline reads: \"2012 Reserve Cabernet - R...  \n",
+       "\n",
+       "[1347 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('../../top_rated_wines.csv')\n",
@@ -16,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "af8bce2c-e123-498a-a5f2-cefffd17fc74",
    "metadata": {},
    "outputs": [],
@@ -27,17 +197,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2b0e4be5-7518-4458-bf47-6913ef9a72a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13959318b8ff44a9a81c9223a22e394d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "589b78953f33452287a10983f7e71979",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98927057cea447e9ad71d4b68a97a894",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cb28b1b74da4a8cb360abf0a6ad23f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1a09ea653294db99e9e4eb0bc70f30a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d6ca203d4634e68903d2ba15fea3f9e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ce44af0c5124c9da48d001d726ec7d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b853be0bdfc84ad8acf81dca42aadba6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15bfe5f75477426f815a87c66c9e9675",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abc9b84c5dae486ba1b5f764a3e8ee14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad194d58dd0d4e2e89712629496f3379",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "encoder = SentenceTransformer('all-MiniLM-L6-v2') # Model to create embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5efa031d-b18a-4db1-9c34-9989a15c822b",
    "metadata": {},
    "outputs": [],
@@ -48,10 +373,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6c03be93-a076-425e-8df1-5a8b6367e558",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/db/h74khb5x6_jfk0g2t1d1ptsw0000gp/T/ipykernel_73036/1729252471.py:2: DeprecationWarning: `recreate_collection` method is deprecated and will be removed in the future. Use `collection_exists` to check collection existence and `create_collection` instead.\n",
+      "  qdrant.recreate_collection(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create collection to store books\n",
     "qdrant.recreate_collection(\n",
@@ -65,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "655d08af-758f-4338-b112-cf94045c7b0d",
    "metadata": {},
    "outputs": [],
@@ -85,19 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "68c9bff5-db38-4a98-b542-cd173af11b53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Catena Zapata Argentino Vineyard Malbec 2004', 'region': 'Argentina', 'variety': 'Red Wine', 'rating': 98.0, 'notes': '\"The single-vineyard 2004 Malbec Argentino Vineyard spent 17 months in new French oak. Remarkably fragrant and complex aromatically, it offers up aromas of wood smoke, creosote, pepper, clove, black cherry, and blackberry. Made in a similar, elegant style, it is the most structured of the three single vineyard wines, needing a minimum of a decade of additional cellaring. It should easily prove to be a 25-40 year wine. It is an exceptional achievement in Malbec. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"'} score: 0.6377782077363163\n",
+      "{'name': 'Bodega Colome Altura Maxima Malbec 2012', 'region': 'Salta, Argentina', 'variety': 'Red Wine', 'rating': 96.0, 'notes': 'Winemaker Thibaut Delmotte has crafted wines of distinction and international acclaim for Colome. He believes the Malbec from Altura Maxima Vineyard is the embodiment of two extremes - a traditional grape variety from his French origins made from the vineyard that challenges all convention in the modern viticultural world.'} score: 0.6179681371756127\n",
+      "{'name': 'Catena Zapata Adrianna Vineyard Malbec 2004', 'region': 'Argentina', 'variety': 'Red Wine', 'rating': 97.0, 'notes': '\"The single-vineyard 2004 Malbec Adrianna Vineyard from the Gualtallary district is inky purple with aromas of wood smoke, pencil lead, game, black cherry, and blackberry liqueur. Opulent, full-flavored, yet remarkably light on its feet, this medium to full-bodied Malbec is all about pleasure. It will certainly evolve for a decade but is hard to resist now. It is a fine test of one\\'s ability to defer immediate gratification. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"'} score: 0.611757510955403\n"
+     ]
+    }
+   ],
    "source": [
     "# Search time for awesome wines!\n",
     "\n",
-    "hits = qdrant.search(\n",
+    "hits = qdrant.query_points( # updated from .search to .query_points\n",
     "    collection_name=\"top_wines\",\n",
-    "    query_vector=encoder.encode(\"A wine from Mendoza Argentina\").tolist(),\n",
+    "    query=encoder.encode(\"Suggest me an amazing Malbec wine from Argentina\").tolist(), #updated from query_vector to query\n",
     "    limit=3\n",
     ")\n",
-    "for hit in hits:\n",
+    "for hit in hits.points: #updated from hits: to hits.points:\n",
     "  print(hit.payload, \"score:\", hit.score)"
    ]
   },
@@ -112,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
