--- a/examples/3-applied-rag/embeddings.ipynb
+++ b/examples/3-applied-rag/embeddings.ipynb
@@ -2,32 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "d566bb99-6808-4976-8476-ed05b7941b80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "700"
+       "243"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../../top_rated_wines.csv')\n",
-    "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
-    "data = df.sample(700).to_dict('records') # Get only 700 records. More records will make it slower to index\n",
+    "#df = pd.read_csv('../../top_rated_wines.csv')\n",
+    "df = pd.read_csv('../../../organization.csv')\n",
+    "#df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
+    "df = df[df['Reports To'].notna()] # remove any NaN values as it blows up serialization\n",
+    "df = df[df['Line Detail 1'].notna()] # remove any NaN values as it blows up serialization\n",
+    "df = df[df['Line Detail 2'].notna()] # remove any NaN values as it blows up serialization\n",
+    "#df = df[df['Organization Name'].notna()] # remove any NaN values as it blows up serialization\n",
+    "data = df.to_dict('records')\n",
+    "#data = df.sample(700).to_dict('records') # Get only 700 records. More records will make it slower to index\n",
     "len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "af8bce2c-e123-498a-a5f2-cefffd17fc74",
    "metadata": {},
    "outputs": [],
@@ -38,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "2b0e4be5-7518-4458-bf47-6913ef9a72a9",
    "metadata": {},
    "outputs": [],
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "5efa031d-b18a-4db1-9c34-9989a15c822b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "6c03be93-a076-425e-8df1-5a8b6367e558",
    "metadata": {},
    "outputs": [
@@ -67,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/db/h74khb5x6_jfk0g2t1d1ptsw0000gp/T/ipykernel_75270/3075695827.py:2: DeprecationWarning: `recreate_collection` method is deprecated and will be removed in the future. Use `collection_exists` to check collection existence and `create_collection` instead.\n",
+      "/var/folders/db/h74khb5x6_jfk0g2t1d1ptsw0000gp/T/ipykernel_86189/3813498731.py:2: DeprecationWarning: `recreate_collection` method is deprecated and will be removed in the future. Use `collection_exists` to check collection existence and `create_collection` instead.\n",
       "  qdrant.recreate_collection(\n"
      ]
     },
@@ -77,7 +83,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +91,8 @@
    "source": [
     "# Create collection to store wines\n",
     "qdrant.recreate_collection(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    #collection_name=\"top_wines\",\n",
+    "    collection_name=\"org_chart\",\n",
     "    vectors_config=models.VectorParams(\n",
     "        size=encoder.get_sentence_embedding_dimension(), # Vector size is defined by used model\n",
     "        distance=models.Distance.COSINE\n",
@@ -95,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "655d08af-758f-4338-b112-cf94045c7b0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# vectorize!\n",
     "qdrant.upload_points(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"org_chart\", # change \"top_wines\" to \"org_chart\" if using organization data\n",
     "    points=[\n",
     "        models.PointStruct(\n",
     "            id=idx,\n",
-    "            vector=encoder.encode(doc[\"notes\"]).tolist(),\n",
+    "            vector=encoder.encode(doc[\"Line Detail 1\"]).tolist(), # change \"notes\" to \"Line Detail 2\" if using organization data\n",
     "            payload=doc,\n",
     "        ) for idx, doc in enumerate(data) # data is the variable holding all the wines\n",
     "    ]\n",
@@ -115,17 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "f23bc999",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_prompt = \"Suggest me an amazing Malbec wine from Argentina\""
+    "#user_prompt = \"Suggest me an amazing Malbec wine from Argentina\"\n",
+    "user_prompt = \"Suggest me an amazing R&D Manager from Bangalore\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "68c9bff5-db38-4a98-b542-cd173af11b53",
    "metadata": {},
    "outputs": [
@@ -133,16 +141,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Catena Zapata Argentino Vineyard Malbec 2004', 'region': 'Argentina', 'variety': 'Red Wine', 'rating': 98.0, 'notes': '\"The single-vineyard 2004 Malbec Argentino Vineyard spent 17 months in new French oak. Remarkably fragrant and complex aromatically, it offers up aromas of wood smoke, creosote, pepper, clove, black cherry, and blackberry. Made in a similar, elegant style, it is the most structured of the three single vineyard wines, needing a minimum of a decade of additional cellaring. It should easily prove to be a 25-40 year wine. It is an exceptional achievement in Malbec. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"'} score: 0.6377782077363163\n",
-      "{'name': 'Catena Zapata Nicasia Vineyard Malbec 2004', 'region': 'Argentina', 'variety': 'Red Wine', 'rating': 96.0, 'notes': '\"The single-vineyard 2004 Malbec Nicasia Vineyard is located in the Altamira district of Mendoza. It was aged for 18 months in new French oak. Opaque purple-colored, it exhibits a complex perfume of pain grille, scorched earth, mineral, licorice, blueberry, and black cherry. Thick on the palate, bordering on opulent, it has layers of fruit, silky tannins, and a long, fruit-filled finish. It will age effortlessly for another 6-8 years and provide pleasure through 2025. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"'} score: 0.6112811748637719\n",
-      "{'name': 'Altos las Hormigas Gualtallary Malbec 2016', 'region': 'Uco Valley, Mendoza, Argentina', 'variety': 'Red Wine', 'rating': 96.0, 'notes': 'A solid violet red color reveals a dense, concentrated, compact wine. Notes of spices and minerality make a complex nose. On the palate, a supple entry, dark berries and spices. A very structured and quite wild Malbec, with firm fine-grain tannins, showing its calcareous foundations and columns. The mouth feel is full of thrilling freshness and balance, with a long and persistent finish.'} score: 0.6056133588773658\n"
+      "{'Unique Identifier': '10_Naresh_Medisetty_(1045807)', 'Name': 'Naresh Medisetty (1045807)', 'Reports To': '1_Cathal_Copas_(1043184)', 'Line Detail 1': 'Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6128553560894914\n",
+      "{'Unique Identifier': '45_Rahul_Gupta_(1497183)', 'Name': 'Rahul Gupta (1497183)', 'Reports To': '7_Vijay_Indoria_(1045867)', 'Line Detail 1': 'Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6128553560894914\n",
+      "{'Unique Identifier': '20_Partha_Nayak_(1045812)', 'Name': 'Partha Nayak (1045812)', 'Reports To': '2_Chris_Gerardot_(1041034)', 'Line Detail 1': 'Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6128553560894914\n",
+      "{'Unique Identifier': '43_Anand_Molkeri_(1045810)', 'Name': 'Anand Molkeri (1045810)', 'Reports To': '7_Vijay_Indoria_(1045867)', 'Line Detail 1': 'Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6128553560894914\n",
+      "{'Unique Identifier': '8_Crispin_Jacob_(1045801)', 'Name': 'Crispin Jacob (1045801)', 'Reports To': '1_Cathal_Copas_(1043184)', 'Line Detail 1': 'Senior Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6082624415178663\n",
+      "{'Unique Identifier': '46_Vijay_Indoria_(1045867)', 'Name': 'Vijay Indoria (1045867)', 'Reports To': '7_Vijay_Indoria_(1045867)', 'Line Detail 1': 'Senior Manager, R&D', 'Line Detail 2': 'Indiana, Fort Wayne 1950 West Cook Road'} score: 0.6082624415178663\n",
+      "{'Unique Identifier': '7_Vijay_Indoria_(1045867)', 'Name': 'Vijay Indoria (1045867)', 'Reports To': '0_Amit_Mahadik_(1461405)', 'Line Detail 1': 'Senior Manager, R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.6082624415178663\n",
+      "{'Unique Identifier': '26_Roopa_B_R_(1068911)', 'Name': 'Roopa B R (1068911)', 'Reports To': '3_David_Holscher_(1040973)', 'Line Detail 1': 'Senior Manager R&D', 'Line Detail 2': 'Karnataka, Bangalore #78, 7th Floor'} score: 0.5874853853198555\n",
+      "{'Unique Identifier': '44_Oswaldin_Azor_(1040940)', 'Name': 'Oswaldin Azor (1040940)', 'Reports To': '7_Vijay_Indoria_(1045867)', 'Line Detail 1': 'Associate Manager, R&D', 'Line Detail 2': 'Florida, Orlando 315 E Robinson Street STE 325'} score: 0.5618533733043483\n",
+      "{'Unique Identifier': '125_Alex_Boldt_(1065899)', 'Name': 'Alex Boldt (1065899)', 'Reports To': '19_Anna_Mulholland_(1040949)', 'Line Detail 1': 'Principal Software Engineer, R&D', 'Line Detail 2': 'Missouri, Virtual Address'} score: 0.557737132740994\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/db/h74khb5x6_jfk0g2t1d1ptsw0000gp/T/ipykernel_75270/4088396704.py:3: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
+      "/var/folders/db/h74khb5x6_jfk0g2t1d1ptsw0000gp/T/ipykernel_86189/2256241894.py:3: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
       "  hits = qdrant.search(\n"
      ]
     }
@@ -151,9 +166,9 @@
     "# Search time for awesome wines!\n",
     "\n",
     "hits = qdrant.search(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"org_chart\", # change \"top_wines\" to \"org_chart\" if using organization data\n",
     "    query_vector=encoder.encode(user_prompt).tolist(),\n",
-    "    limit=3\n",
+    "    limit=10\n",
     ")\n",
     "for hit in hits:\n",
     "  print(hit.payload, \"score:\", hit.score)"
@@ -161,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "33243e5d-9e0d-4ec4-98e9-3fc56b8bdb10",
    "metadata": {},
    "outputs": [],
@@ -172,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e6c2b91e",
    "metadata": {},
    "outputs": [
@@ -180,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content='[{\\'name\\': \\'Catena Zapata Argentino Vineyard Malbec 2004\\', \\'region\\': \\'Argentina\\', \\'variety\\': \\'Red Wine\\', \\'rating\\': 98.0, \\'notes\\': \\'\"The single-vineyard 2004 Malbec Argentino Vineyard spent 17 months in new French oak. Remarkably fragrant and complex aromatically, it offers up aromas of wood smoke, creosote, pepper, clove, black cherry, and blackberry. Made in a similar, elegant style, it is the most structured of the three single vineyard wines, needing a minimum of a decade of additional cellaring. It should easily prove to be a 25-40 year wine. It is an exceptional achievement in Malbec. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"\\'}, {\\'name\\': \\'Catena Zapata Nicasia Vineyard Malbec 2004\\', \\'region\\': \\'Argentina\\', \\'variety\\': \\'Red Wine\\', \\'rating\\': 96.0, \\'notes\\': \\'\"The single-vineyard 2004 Malbec Nicasia Vineyard is located in the Altamira district of Mendoza. It was aged for 18 months in new French oak. Opaque purple-colored, it exhibits a complex perfume of pain grille, scorched earth, mineral, licorice, blueberry, and black cherry. Thick on the palate, bordering on opulent, it has layers of fruit, silky tannins, and a long, fruit-filled finish. It will age effortlessly for another 6-8 years and provide pleasure through 2025. When all is said and done, Catena Zapata is the Argentina winery of reference – the standard of excellence for comparing all others. The brilliant, forward-thinking Nicolas Catena remains in charge, with his daughter, Laura, playing an increasingly large role. The Catena Zapata winery is an essential destination for fans of both architecture and wine in Mendoza. It is hard to believe, given the surge in popularity of Malbec in recent years, that Catena Zapata only began exporting Malbec to the United States in 1994.\"\\'}, {\\'name\\': \\'Altos las Hormigas Gualtallary Malbec 2016\\', \\'region\\': \\'Uco Valley, Mendoza, Argentina\\', \\'variety\\': \\'Red Wine\\', \\'rating\\': 96.0, \\'notes\\': \\'A solid violet red color reveals a dense, concentrated, compact wine. Notes of spices and minerality make a complex nose. On the palate, a supple entry, dark berries and spices. A very structured and quite wild Malbec, with firm fine-grain tannins, showing its calcareous foundations and columns. The mouth feel is full of thrilling freshness and balance, with a long and persistent finish.\\'}]</s>', refusal=None, role='assistant', annotations=None, audio=None, function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='Here are five amazing R&D Manager candidates from Bangalore:\\n\\n1. Naresh Medisetty (1045807)\\n2. Rahul Gupta (1497183)\\n3. Partha Nayak (1045812)\\n4. Anand Molkeri (1045810)\\n5. Vijay Indoria (1045867)\\n\\nThese candidates have a strong background in R&D and have been praised for their exceptional work by their previous supervisors. They have experience working in various R&D roles and have been recognized for their innovative ideas and contributions to their teams.\\n\\nPlease note that these candidates are not currently open positions, but they may be suitable for future opportunities. If you have any specific requirements or would like more information, please let me know.</s>', refusal=None, role='assistant', annotations=None, audio=None, function_call=None, tool_calls=None)\n"
      ]
     }
    ],
@@ -193,9 +208,14 @@
     ")\n",
     "completion = client.chat.completions.create(\n",
     "    model=\"LLaMA_CPP\",\n",
+    "   # messages=[\n",
+    "   #     {\"role\": \"system\", \"content\": \"You are chatbot, a wine specialist. Your top priority is to help guide users into selecting amazing wine and guide them with their requests.\"},\n",
+    "   #     {\"role\": \"user\", \"content\": \"Suggest me an amazing Malbec wine from Argentina\"},\n",
+    "   #     {\"role\": \"assistant\", \"content\": str(search_results)}\n",
+    "   # ]\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are chatbot, a wine specialist. Your top priority is to help guide users into selecting amazing wine and guide them with their requests.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Suggest me an amazing Malbec wine from Argentina\"},\n",
+    "        {\"role\": \"system\", \"content\": \"You are chatbot, a HR specialist. Your top priority is to help guide users into selecting amazing talent and guide them with their requests.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Suggest me an amazing R&D Manager from Bangalore\"},\n",
     "        {\"role\": \"assistant\", \"content\": str(search_results)}\n",
     "    ]\n",
     ")\n",
